--- a/views/penrose/order_detail.html
+++ b/views/penrose/order_detail.html
@@ -1,9 +1,46 @@
-<a class="btn btn-primary" href="javascript:void(0)" onclick="getOpenOrders();" align="left">Back</a>
+<div class="col-xs-12">&nbsp;</div>
 
 <h4>Order #{{order_id}}</h4><br>
 <p class="text-center">{{delivery_method}} on {{delivery_date}}</p>	
 
-<table id="order-detail-table" class="dtable"> 
+<!-- spacing -->
+<div class="col-xs-12">&nbsp;</div>
+
+{{#if ship_to_name}}
+<div class="col-xs-12 col-lg-6">
+	<div class="panel panel-default">
+		<div class="panel-heading">Ship To</div>
+		<div class="panel-body">
+			<p>{{ship_to_name}}</p>
+			<p>{{ship_to_addr1}}</p>
+			<p>{{ship_to_addr2}}</p>
+			<p>{{ship_to_city}}</p>
+			<p>{{ship_to_state}}</p>
+			<p>{{ship_to_zip}}</p>
+		</div>
+	</div>
+</div>
+
+<div class="col-xs-12 col-lg-6">
+	<div class="panel panel-default">
+		<div class="panel-heading">Bill To</div>
+		<div class="panel-body">
+			<p>{{bill_to_name}}</p>
+			<p>{{bill_to_addr1}}</p>
+			<p>{{bill_to_addr2}}</p>
+			<p>{{bill_to_city}}</p>
+			<p>{{bill_to_state}}</p>
+			<p>{{bill_to_zip}}</p>
+		</div>
+	</div>
+</div>
+
+{{/if}}
+
+<!-- spacing -->
+<div class="col-xs-12">&nbsp;</div>
+
+<table class="table table-striped table-bordered"> 
 	<thead>
 		<tr>
 			<th>Beer</th>
@@ -22,10 +59,6 @@
 			<td class="price">${{unit_price}}</td>
 			<td class="quantity">{{quantity}}</td>
 		</tr>
-		{{else}}
-			<div class="col-xs-12 alert alert-danger">
-				<p>This order does not contain any lines yet!</p>
-			</div>
 		{{/each}}
 	</tbody>
 </table>
@@ -38,6 +71,14 @@
 	<p class="order-total"><b>Total: $<span id="total-price">{{total_price}}</span></b><p>
 </div>
 
+<!-- spacing -->
+<div class="col-xs-12">&nbsp;</div>
 
+<div class="col-xs-6">
+	<div class="panel panel-default">
+		<div class="panel-heading">Order comments:</div>
+		<div class="panel-body">{{comments}}</div>
+	</div>
+</div>
 
 
