--- a/views/penrose/cart.html
+++ b/views/penrose/cart.html
@@ -33,16 +33,16 @@
 	   	</div>
 
 	   	<div class="col-xs-12">
+	   		<div class="col-xs-4">
+	   			<a class="btn btn-primary" href="javascript:void(0)" onclick="getOrderPage();">Back</a> 
+	   			<a class="btn btn-primary" href="javascript:void(0)" onclick="deleteCart();">Cancel Order</a>
+	   			<a class="btn btn-primary" href="javascript:void(0)" onclick="buildCheckoutPage();">Check Out</a>
+	   		</div>
+
 	   		<div class="col-xs-4 col-md-2 pull-right">
 		   		<hr>
 	   			<p class="order-total"><b>Total: $<span id="total-price">{{total_price}}</span></b><p>
 	   		</div>
 
-	   		<div class="col-xs-2 col-md-1">
-				<a class="btn btn-primary" href="javascript:void(0)" onclick="getOrderPage();">Back</a> 
-			</div>
-			<div class="col-xs-2 col-md-1">
-				<a class="btn btn-primary" href="javascript:void(0)" onclick="buildCheckoutPage();">Check Out</a>
-			</div>
 		</div>
 		
