--- a/views/penrose/checkout.html
+++ b/views/penrose/checkout.html
@@ -23,6 +23,7 @@
 
 	<div class="col-xs-6">
 		<a class="btn btn-primary" href="javascript:void(0)" onclick="getCart();">Back</a>
+		<a class="btn btn-primary" href="javascript:void(0)" onclick="deleteCart();">Cancel Order</a>
 		<a class="btn btn-primary" href="javascript:void(0)" onclick="submitOrder();">Place Order</a>
 	</div>
 </form>
