--- a/views/penrose/order.html
+++ b/views/penrose/order.html
@@ -29,5 +29,6 @@
 <div class="col-xs-12">&nbsp;</div>
 
 <div class="col-xs-12">
+   <a class="btn btn-primary" href="javascript:void(0)" onclick="deleteCart();">Cancel Order</a>
 	<a class="btn btn-primary" href="javascript:void(0)" onclick="buildCart();">View Cart</a>
 </div>
