--- a/views/dashboard/css/styles.css
+++ b/views/dashboard/css/styles.css
@@ -1,3 +1,4 @@
+/*
 .order-detail-link, .remove-link {
 	text-align: center;
 	text-decoration: underline;
@@ -22,4 +23,10 @@
 	margin-right: auto;
 	margin-top: 10%;
 	margin-bottom: 10%;
+}
+*/
+
+.hidden {
+	display: none;
+	visibility: hidden;
 }
