--- a/views/dashboard/order_headers.html
+++ b/views/dashboard/order_headers.html
@@ -12,7 +12,7 @@
             <div class="col-lg-12">
                 <div class="panel-body">
                     <div class="table-responsive">
-                        <table id="orders-table" class="table table-bordered table-hover table-striped">
+                        <table class="table table-bordered table-hover table-striped">
                             <thead>
                                 <tr>
                                     <th>Order #</th>
@@ -35,8 +35,11 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="text-right">
-                        <a href="javascript:void(0)" onclick="loadOrderSearch()">Search Orders <i class="fa fa-arrow-circle-right"></i></a>
+                    
+                    <div class="col-xs-12">&nbsp;</div>
+
+                    <div>
+                        <a class="btn btn-primary" href="javascript:void(0)" onclick="loadOrderSearch()">Search Orders</a>
                     </div>
                 </div>
             </div>
