Code cleanup, continued building out dashboard.

--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -49,13 +49,13 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse hidden" id="main-nav">
                 <ul class="nav navbar-nav side-nav">
                     <li>
-                        <a href="javascript:void(0)" onclick="getOpenOrders();"><i class="fa fa-fw"></i>Orders</a>
+                        <a href="javascript:void(0)" onclick="getOrderList();"><i class="fa fa-fw"></i>Orders</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)" onclick="getCustomerList();"><i class="fa fa-fw"></i>Customer Info</a>
+                        <a href="javascript:void(0)" onclick="getCustomerList();"><i class="fa fa-fw"></i>Customers</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)" onclick="getProductList();"><i class="fa fa-fw"></i>Product Info</a>
+                        <a href="javascript:void(0)" onclick="getProductList();"><i class="fa fa-fw"></i>Products</a>
                     </li>
                     <li>
                         <a href="javascript:void(0)" onclick="getSettings();"><i class="fa fa-fw"></i>Settings</a>
@@ -130,8 +130,6 @@
             if (sessionExists()){
                 verifyLogin();
             }
-
-            $("#simple-menu").sidr();
         });
     </script>
 
