--- a/views/dashboard/order_detail.html
+++ b/views/dashboard/order_detail.html
@@ -12,7 +12,7 @@
     <div class="text-left">
         <a href="javascript:void(0)" onclick="loadOrderSearch()">Search Orders</a>
         <br><br>
-        <a href="javascript:void(0)" onclick="getOpenOrders()">Open Orders</a>
+        <a href="javascript:void(0)" onclick="getOrderList()">Open Orders</a>
     </div>
 </div>
                     
