--- a/views/dashboard/order_list.html
+++ b/views/dashboard/order_list.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                Open Orders
+                Orders
             </h1>
         </div>
         </div>
