--- a/views/dashboard/order_list.html
+++ b/views/dashboard/order_list.html
@@ -12,7 +12,7 @@
             <div class="col-lg-12">
                 <div class="panel-body">
                     <div class="table-responsive">
-                        <table class="table table-bordered table-hover table-striped">
+                        <table class="dtable table table-hover table-striped">
                             <thead>
                                 <tr>
                                     <th>Order #</th>
