--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -49,13 +49,13 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse hidden" id="main-nav">
                 <ul class="nav navbar-nav side-nav">
                     <li>
-                        <a href="javascript:void(0)" onclick="getOrderList();"><i class="fa fa-fw"></i>Orders</a>
+                        <a href="javascript:void(0)" onclick="getHeaderList('order');"><i class="fa fa-fw"></i>Orders</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)" onclick="getCustomerList();"><i class="fa fa-fw"></i>Customers</a>
+                        <a href="javascript:void(0)" onclick="getHeaderList('customer');"><i class="fa fa-fw"></i>Customers</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)" onclick="getProductList();"><i class="fa fa-fw"></i>Products</a>
+                        <a href="javascript:void(0)" onclick="getHeaderList('product');"><i class="fa fa-fw"></i>Products</a>
                     </li>
                     <li>
                         <a href="javascript:void(0)" onclick="getSettings();"><i class="fa fa-fw"></i>Settings</a>
