--- a/views/dashboard/order_search.html
+++ b/views/dashboard/order_search.html
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-xs-1">
-        <a href="javascript:void(0)" onclick="getOrderList()" class="btn btn-primary">Back</a>
+        <a href="javascript:void(0)" onclick="getHeaderList('order')" class="btn btn-primary">Back</a>
     </div>
                     
     <br><br>
