--- a/views/dashboard/product_detail.html
+++ b/views/dashboard/product_detail.html
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="text-left">
-        <a href="javascript:void(0)" onclick="getProductList()">Product List</a>
+        <a href="javascript:void(0)" onclick="getHeaderList('product')">Product List</a>
     </div>
 </div>
 
