--- a/views/dashboard/customer_detail.html
+++ b/views/dashboard/customer_detail.html
@@ -10,9 +10,9 @@
 
 <div class="row">
     <div class="text-left">
-        <a href="javascript:void(0)" onclick="loadCustomerSearch()">Search Customers</a>
+        <a href="javascript:void(0)" onclick="loadSearch('customer')">Search Customers</a>
         <br><br>
-        <a href="javascript:void(0)" onclick="getCustomerList()">Customer List</a>
+        <a href="javascript:void(0)" onclick="getHeaderList('customer')">Customer List</a>
     </div>
 </div>
 
