--- a/views/dashboard/order_list.html
+++ b/views/dashboard/order_list.html
@@ -25,7 +25,7 @@
                             <tbody>
                                 {{#orders}}
                                 <tr>
-                                    <td class="order-detail-link"><a href="javascript:void(0)" onclick="getOrderDetail({{order_id}})">{{order_id}}</a></td>
+                                    <td class="order-detail-link"><a href="javascript:void(0)" onclick="getRecordDetail('order', {{order_id}})">{{order_id}}</a></td>
                                     <td>{{status}}</td>
                                     <td>{{order_date}}</td>
                                     <td>{{delivery_method}}</td>
@@ -39,7 +39,7 @@
                     <div class="col-xs-12">&nbsp;</div>
 
                     <div>
-                        <a class="btn btn-primary" href="javascript:void(0)" onclick="loadOrderSearch()">Search Orders</a>
+                        <a class="btn btn-primary" href="javascript:void(0)" onclick="loadSearch('order')">Search Orders</a>
                     </div>
                 </div>
             </div>
