--- a/views/dashboard/product_list.html
+++ b/views/dashboard/product_list.html
@@ -22,7 +22,7 @@
                             <tbody>
                                 {{#products}}
                                 <tr>
-                                    <td class="product-detail-link"><a href="javascript:void(0)" onclick="getProductDetail({{product_id}})">{{product_code}}</a></td>
+                                    <td class="product-detail-link"><a href="javascript:void(0)" onclick="getRecordDetail('product', {{product_id}})">{{product_code}}</a></td>
                                     <td>{{product_desc}}</td>
                                 </tr>
                                 {{/products}}
@@ -36,7 +36,7 @@
 
                     
                     <div>
-                        <a class="btn btn-primary" href="javascript:void(0)" onclick="loadOrderSearch()">Search Products</a>
+                        <a class="btn btn-primary" href="javascript:void(0)" onclick="loadSearch('product')">Search Products</a>
                     </div>
                     -->
                 </div>
